Skip to content

OSX "Argument list too long" error using Ninja generator

On OSX, I receive an "Argument list too long" error during a link target using Fortran and the Ninja generator. Over 4000 object files need to be linked in one library. When using the Unix Makefile generator on OSX, response files are created, which alleviates this problem. These files don't seem to be created using Ninja on OSX Following two files show the truncated output of the linking step for Ninja and Make respectively.
build-ninja.log
build-make.log

I tried export CMAKE_NINJA_FORCE_RESPONSE_FILE=1 but then I got a CMake error that the Fortran compiler (gfortran) could not compile a simple program during the configure stage.

cmake version 3.11.0-rc2
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information